--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 
 [dependencies]
 ctor = "0.1"
+fnv = "1"
+fxhash = "0.2"
+hashbrown = "0.2"
 lazy_static = "1"
-log = "0.4"
+log = { version = "0.4", features = ["release_max_level_off"] }
 unreachable = "1"
-mapping = { path = "../mapping-rs" }
 
 [build-dependencies]
 cc = "1"
@@ -22,3 +24,4 @@ panic = "abort"
 
 [profile.release]
 panic = "abort"
+lto = true
