--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ hashbrown = "0.2"
 lazy_static = "1"
 log = { version = "0.4", features = ["release_max_level_off"] }
 unreachable = "1"
+serde = { version = "1", features = ["derive"] }
+serde_derive = "1"
+serde_json = "1"
 
 [build-dependencies]
 cc = "1"
