--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "bochscpu"
 version = "0.1.0"
 authors = ["x"]
 edition = "2021"
+rust-version = "1.71.0"
 
 [lib]
 crate-type = ["dylib", "rlib"]
