Add `release-with-debuginfo` Cargo profile
Equivalent of cmake `RelWithDebInfo`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ panic = "abort"
 [profile.release]
 panic = "abort"
 lto = true
+
+[profile.release-with-debuginfo]
+inherits = "release"
+debug = true
