--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ serde = { version = "1", features = ["derive"], optional = true }
 
 [build-dependencies]
 cc = "1"
-reqwest = { version = "0.12.24", features = ["blocking"] }
-zip = "6.0.0"
+reqwest = { version = "0.13.2", features = ["blocking"] }
+zip = "8.0.0"
+json = "0.12.4"
 
 [profile.dev]
 panic = "abort"
